# majordomo

./: .gitignore  .htaccess  ARCHITECTURE_EVALUATION.md  CLAUDE.md  DATA-MODEL.md  DESIGN.md  ESTIMATED_DIRECTORY_STRUCTURE.md  INVARIANTS.md  PLAN.md  README.md  README.web.md  WEB_APPLICATION.md  WORLD_AS_OF.design.md  app.py  create_subscription.py  google_chat_app.cgi  google_chat_reporter.py  google_space_webhook.cgi  pyproject.toml  refactoring_plan_single_bot_to_multi_bot_tachy_others_with_optional_dispatcher.md  test_chat_app.sh  test_webhook.sh
bots/: __init__.py  tachy.py
bots/orcal/: __init__.py
bots/raven/: __init__.py
cgi-bin/: .gitignore  .htaccess.example  chat_events.cgi  chatbot.cgi  dispatcher.cgi  google_chat_app.cgi  tasks-reporter.cgi
chatbot/: EVENTS_API_SETUP.md  README.md  SETUP.md  __init__.py  handler.py  test_handler.py
config/: .htaccess
debian/: changelog  control  copyright
dispatcher/: __init__.py
docs/: CHATBOT-SETUP.md  DISPATCHER-SETUP.md  RELEASING.md
src/majordomo/: __init__.py  __main__.py  _claude_command.py  api.py  cli.py  config.py  dates.py  db.py  decoder.py  live.py  mcp_server.py  models.py  nocache.py  output.py  readers.py  reports.py  sieve.py
tests/: INTEGRATION.md  _shim.py  integration.sh  test_dates.py  test_decoder.py  test_decoder_parity.py  test_fresh_reader.py  test_identity.py  test_live.py  test_live_e2e.py  test_login_safety.py  test_nocache_e2e.py  test_nocache_reader.py  test_parity.py  test_send.py  test_sieve.py  test_without_bi.py  test_world_as_of.py
