[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "majordomo"
version = "0.1.0"
description = "Read and report Google Chat task activity from the cache mirror."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "rich>=13",
    "pymysql>=1.0",
]

[project.scripts]
majordomo = "majordomo.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
