[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "majordomo"
version = "0.1.2"
description = "Read and report Google Chat task activity from the cache mirror."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9",
    "rich>=13",
    "pymysql>=1.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]
live = [
    "google-api-python-client>=2",
    "google-auth-oauthlib>=1",
    "google-auth>=2",
]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
majordomo = "majordomo.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
